style(quick-settings): fix dynamic spacing

--- a/modules/charge-levels.scss
+++ b/modules/charge-levels.scss
@@ -5,12 +5,7 @@
         margin: 10px;
         padding: 15px;
 
-        .icon {
-            font-size: 16pt;
-        }
-
-        .label {
-            font-size: 10pt;
-        }
+        .icon  { font-size: 16pt }
+        .label { font-size: 10pt }
     }
 }
