--- a/panels/quick-settings.scss
+++ b/panels/quick-settings.scss
@@ -1,3 +1,7 @@
 .quick-settings {
     background: transparent;
 }
+
+.quick-setting {
+    margin-bottom: 15px;
+}
